fixed speed and alignment

--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -397,8 +397,8 @@ width: 100%;
     font-style: normal;
   position: absolute;
   bottom: -8%; 
-  left: 7%; 
-  font-size: 3rem;
+  left: 5%; 
+  font-size: 2.6rem;
   font-weight: 500;
   color: white;
 }
